alignment mistake corrected

--- a/css/main.css
+++ b/css/main.css
@@ -140,6 +140,7 @@ margin-right: 22px;
 
 article{
 width:264px;
+margin-left: 47px;
 
 
 }
